# ratbox-services

./: CREDITS  ChangeLog  DBMOVE  INSTALL  INSTALL.mysql  INSTALL.pgsql  INSTALL.sqlite  LICENSE  Makefile.in  README  RELEASE_NOTES  SVN-Access  UPGRADING  aclocal.m4  configure  cyco-fix.txt
autoconf/: configure.in  install-sh
doc/: banning_email_domains.txt  database_mod.txt  dbhook.txt  dbhook_current.txt  example.conf  operguide.txt  rsdb.txt  userintro.txt  whats-new-1.1.txt  whats-new-1.2.txt
doc/ChangeLog/: ChangeLog-1.0  ChangeLog-1.1
doc/release_notes/: RELEASE_NOTES_1.0  RELEASE_NOTES_1.1
help/: Makefile.in  genindex.sh
help/bg/alis/: general  index  list
help/bg/banserv/: addregexp  addregexpneg  delregexp  delregexpneg  findkline  findresv  findxline  index  index-admin  kline  listregexps  resv  sync  u-findkline  u-findresv  u-findxline  u-kline  u-resv  u-sync  u-unkline  u-unresv  u-unxline  u-xline  unkline  unresv  unxline  xline
help/bg/chanserv/: addban  adduser  chandrop  chaninfo  chanlist  chanregister  chansuspend  chanunsuspend  clearallops  clearbans  clearmodes  clearops  delban  delowner  deluser  general  getkey  index  index-admin  info  invite  listbans  listusers  modauto  modban  moduser  op  register  set  suspend  u-chandrop  u-chaninfo  u-chanregister  u-chansuspend  u-chanunsuspend  unban  unsuspend  voice
help/bg/global/: addwelcome  delwelcome  index  index-admin  listwelcome  netmsg  u-addwelcome  u-delwelcome  u-listwelcome  u-netmsg
help/bg/jupeserv/: calljupe  callunjupe  general  index  index-admin  jupe  pending  u-jupe  u-unjupe  unjupe
help/bg/main/: u-boot  u-chat  u-connect  u-events  u-quit  u-rehash  u-service  u-stats  u-status
help/bg/memoserv/: delete  general  index  list  read  send
help/bg/nickserv/: drop  general  index  index-admin  info  nickdrop  regain  register  release  set  u-nickdrop
help/bg/operbot/: general  index  index-admin  invite  objoin  obpart  op  u-objoin  u-obpart
help/bg/operserv/: addignore  dbsync  delignore  die  general  index-admin  listignores  listopers  omode  osjoin  ospart  rehash  takeover  u-addignore  u-dbsync  u-delignore  u-die  u-listignores  u-listopers  u-omode  u-osjoin  u-ospart  u-takeover
help/bg/userserv/: activate  general  index  index-admin  info  language  login  logout  register  resetemail  resetpass  set  u-userdrop  u-userinfo  u-userregister  u-usersetemail  u-usersetpass  u-usersuspend  u-userunsuspend  userdrop  userinfo  userlist  userregister  usersetemail  usersetpass  usersuspend  userunsuspend
help/bg/watchserv/: general  index-admin  u-watch  watch
help/en/alis/: general  index  list
help/en/banserv/: addregexp  addregexpneg  delregexp  delregexpneg  findkline  findresv  findxline  general  index-admin  kline  listregexps  resv  sync  u-findkline  u-findresv  u-findxline  u-kline  u-resv  u-sync  u-unkline  u-unresv  u-unxline  u-xline  unkline  unresv  unxline  xline
help/en/chanserv/: addban  adduser  chandrop  chaninfo  chanlist  chanregister  chansuspend  chanunsuspend  clearallops  clearbans  clearmodes  clearops  delban  delowner  deluser  general  getkey  index  index-admin  info  invite  listbans  listusers  modauto  modban  moduser  op  register  set  suspend  u-chandrop  u-chaninfo  u-chanregister  u-chansuspend  u-chanunsuspend  unban  unsuspend  voice
help/en/global/: addwelcome  delwelcome  index  index-admin  listwelcome  netmsg  u-addwelcome  u-delwelcome  u-listwelcome  u-netmsg
help/en/jupeserv/: calljupe  callunjupe  general  index  index-admin  jupe  pending  u-jupe  u-unjupe  unjupe
help/en/main/: u-boot  u-chat  u-connect  u-events  u-quit  u-rehash  u-service  u-stats  u-status
help/en/memoserv/: delete  general  index  list  read  send
help/en/nickserv/: drop  general  index  index-admin  info  nickdrop  regain  register  release  set  u-nickdrop
help/en/operbot/: general  index  index-admin  invite  objoin  obpart  op  u-objoin  u-obpart
help/en/operserv/: addignore  dbsync  delignore  die  general  index-admin  listignores  listopers  omode  osjoin  ospart  rehash  takeover  u-addignore  u-dbsync  u-delignore  u-die  u-listignores  u-listopers  u-omode  u-osjoin  u-ospart  u-takeover
help/en/userserv/: activate  general  index  index-admin  info  language  login  logout  register  resetemail  resetpass  set  u-userdrop  u-userinfo  u-userregister  u-usersetemail  u-usersetpass  u-usersuspend  u-userunsuspend  userdrop  userinfo  userlist  userregister  usersetemail  usersetpass  usersuspend  userunsuspend
help/en/watchserv/: index  index-admin  u-watch  watch
help/ru/: README
help/ru/alis/: general  index  list
help/ru/banserv/: addregexp  addregexpneg  delregexp  delregexpneg  findkline  findresv  findxline  general  index-admin  kline  listregexps  resv  sync  u-findkline  u-findresv  u-findxline  u-kline  u-resv  u-sync  u-unkline  u-unresv  (+6 more)
include/: balloc.h  c_init.h  cache.h  channel.h  client.h  conf.h  config.h  dbhook.h  email.h  event.h  hook.h  io.h  langs.h  log.h  modebuild.h  newconf.h  rsdb.h  rserv.h  s_banserv.h  s_chanserv.h  s_nickserv.h  s_userserv.h  scommand.h  serno.h  service.h  setup.h.in  stdinc.h  tools.h  ucommand.h  watch.h
langs/: Makefile.in  bg.lang  example.lang  genexample.pl  ru.lang
pcre/: Makefile.in  configure
sqlite3/: Makefile.in  configure  configure.ac  main.mk
src/: .depend  Makefile.in  balloc.c  c_error.c  c_message.c  c_mode.c  cache.c  channel.c  cidr.c  client.c  conf.c  crypt.c  dbhook.c  email.c  event.c  hook.c  io.c  langs.c  langs_format.c  lexer.l  log.c  match.c  messages.c  modebuild.c  newconf.c  parser.y  rsdb_mysql.c  rsdb_pgsql.c  rsdb_sqlite3.c  rserv.c  s_alis.c  s_banserv.c  s_chanserv.c  s_global.c  s_jupeserv.c  s_memoserv.c  s_nickserv.c  s_operbot.c  s_operserv.c  s_userserv.c  (+7 more)
tools/: dbupgrade.pl  definetolength.pl  generate-schema.pl  sqlitecheck.pl
tools/base/: schema-mysql.txt  schema-pgsql.txt  schema-sqlite.txt
tools/oldschema/: 1.0-mysql-schema.txt  1.0-pgsql-schema.txt  1.0-sqlite-schema.txt
(+147 files in other folders)
